react-kubectl/manifests/movies-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: movies-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: movies-api
    spec:
      containers:
      - image: okteto/example-react-api
        name: movies-api
