react-kubectl/manifests/movies-frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: movies-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: movies-frontend
    spec:
      containers:
      - image: okteto/example-react-frontend
        name: movies-frontend
