react-kubectl/manifests/movies-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  type: ClusterIP
  tls: 
    - hosts: 
      - movies.usa.okteto.net
      secretName: movies-secret-tls
  rules:
    - http: 
      paths:
        - path: /api
          backend: 
            serviceName: movies-api-service
            servicePort: 3000
        - path: /
          backend: 
            serviceName: movies-frontend-service
            servicePort: 9000
  ports:
  - name: "movies-frontend-service"
    port: 9000
    targetPort: 9000
  - name: "movies-frontend-hmr-service"
    port: 9001
    targetPort: 9001
  selector:
    app: movies-frontend
