react-kubectl/manifests/movies-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies
spec:
  type: LoadBalancer
  ports:
  - name: "movies-service"
    port: 9000
    targetPort: 9000
  - name: "movies-hmr-service"
    port: 9001
    targetPort: 9001
  selector:
    app: movies
